--- a/themes/tent/sass/style.scss
+++ b/themes/tent/sass/style.scss
@@ -1,22 +1,13 @@
 /*!
-Theme Name: RED Starter Theme
-Theme URI: http://underscores.me/
-Author: RED Academy
-Author URI: http://www.redacademy.com
-Description: A WordPress starter theme for RED Academy students.
-Version: 1.0.0
+Theme Name: Tent 
+Theme URI: https://github.com/shwilliam/tent
+Author: William L <w-lindvall@outlook.com> 
+Author URI: http://github.com/shwilliam
+Description: A camping-inspired WP theme and plugin collection
+Version: 0.1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags:
-
-This theme, like WordPress, is licensed under the GPL.
-Use it to make something cool, have fun, and share what you've learned with others.
-
-RED Starter Theme is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
-Underscores is distributed under the terms of the GNU GPL v2 or later.
-
-Normalizing styles have been helped along thanks to the fine work of
-Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 */
 
 /*--------------------------------------------------------------
