--- a/themes/tent/sass/_variables.scss
+++ b/themes/tent/sass/_variables.scss
@@ -1,9 +1,7 @@
 // Structure
-
 $base__space-unit: 1.5rem;
 
 // Colors
-
 $color__background-body: #fff;
 $color__text-main: #404040;
 
@@ -20,9 +18,8 @@ $color__link-visited: purple;
 $color__link-hover: midnightblue;
 
 // Typography
-
 $font__main: sans-serif;
-$font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
-$font__pre: "Courier 10 Pitch", Courier, monospace;
+$font__code: Monaco, Consolas, 'Andale Mono', 'DejaVu Sans Mono', monospace;
+$font__pre: 'Courier 10 Pitch', Courier, monospace;
 $font__line-height-body: 1.5;
 $font__line-height-pre: 1.6;
