--- a/themes/tent/sass/style.scss
+++ b/themes/tent/sass/style.scss
@@ -36,21 +36,17 @@ Tags:
 	## Front page
 --------------------------------------------------------------*/
 
-// Imported but not included in the stylesheet.
+@import 'variables';
+@import 'mixins';
 
-@import "variables";
-@import "mixins";
-
-// CSS included in style.css.
-
-@import "normalize";
-@import "fonts";
-@import "typography";
-@import "elements";
-@import "forms";
-@import "navigation";
-@import "modules";
-@import "widgets";
-@import "content";
-@import "media";
-@import "page-templates";
+@import 'normalize';
+@import 'fonts';
+@import 'typography';
+@import 'elements';
+@import 'forms';
+@import 'navigation';
+@import 'modules';
+@import 'widgets';
+@import 'content';
+@import 'media';
+@import 'page-templates';
