--- a/themes/tent/sass/templates/_comments.scss
+++ b/themes/tent/sass/templates/_comments.scss
@@ -1,5 +1,7 @@
 /*--------------------------------------------------------------
-# Page Templates
+# Comments 
 --------------------------------------------------------------*/
 
-/* Front page */
+.comment-content a {
+  word-wrap: break-word;
+}
