--- a/themes/tent/sass/templates/_index.scss
+++ b/themes/tent/sass/templates/_index.scss
@@ -1,3 +1,8 @@
 /*--------------------------------------------------------------
-# Embedded fonts 
+# Index.php
 --------------------------------------------------------------*/
+
+.site-content {
+  display: flex;
+  justify-content: space-between;
+}
