--- a/themes/tent/sass/templates/_sidebar.scss
+++ b/themes/tent/sass/templates/_sidebar.scss
@@ -1,3 +1,7 @@
 /*--------------------------------------------------------------
-# Embedded fonts 
+# Sidebar 
 --------------------------------------------------------------*/
+
+.sidebar {
+  flex-grow: 0;
+}
