style splash header

--- a/themes/tent/sass/_variables.scss
+++ b/themes/tent/sass/_variables.scss
@@ -21,7 +21,7 @@ $color__brand: #248a83;
 
 // Typography
 $font__main: sans-serif;
-$font__code: Monaco, Consolas, 'Andale Mono', 'DejaVu Sans Mono', monospace;
-$font__pre: 'Courier 10 Pitch', Courier, monospace;
+$font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
+$font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.5;
 $font__line-height-pre: 1.6;
