--- a/plugins/tent-blocks/src/hero-image-header/style.scss
+++ b/plugins/tent-blocks/src/hero-image-header/style.scss
@@ -2,7 +2,12 @@
  * Styles
  */
 
+.hero-image-header__wrapper {
+  width: 100%;
+  overflow: hidden;
+}
+
 .hero-image-header {
   height: 100vh;
-  min-width: 100vw;
+  min-width: 100%;
 }
