style centered containers

--- a/themes/tent/sass/templates/_header.scss
+++ b/themes/tent/sass/templates/_header.scss
@@ -2,6 +2,10 @@
 # Header 
 --------------------------------------------------------------*/
 
+.site-header {
+  @include container;
+}
+
 .site-header--above {
   position: absolute;
   top: 0;
