--- a/themes/tent/sass/_mixins.scss
+++ b/themes/tent/sass/_mixins.scss
@@ -4,6 +4,18 @@
   font-size: $sizeValue * 1rem;
 }
 
+@mixin container {
+  max-width: $max-width;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@mixin reset-list {
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
+}
+
 @mixin center-block {
   display: block;
   margin-left: auto;
@@ -12,12 +24,6 @@
 
 @mixin border-bottom {
   border-bottom: 1px solid #e1e1e1;
-}
-
-@mixin reset-list {
-  list-style: none;
-  margin: 0;
-  padding-left: 0;
 }
 
 // Bullet-proof sr-only
