--- a/themes/tent/sass/templates/_page.scss
+++ b/themes/tent/sass/templates/_page.scss
@@ -3,5 +3,11 @@
 --------------------------------------------------------------*/
 
 .entry-title {
-  color: $color__background-body;
+  color: $color__text-main;
+}
+
+.site-content--splash {
+  .entry-title {
+    color: $color__background-body;
+  }
 }
