sketch product archive page

--- a/themes/tent/sass/style.scss
+++ b/themes/tent/sass/style.scss
@@ -40,3 +40,4 @@ Tags:
 @import "templates/_content";
 @import "templates/_sidebar";
 @import "templates/_comments";
+@import "templates/_archive-product";
