refactor styles + class names

--- a/themes/tent/sass/_modules.scss
+++ b/themes/tent/sass/_modules.scss
@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------
-# Modules 
+# Reusable utility classes 
 --------------------------------------------------------------*/
 
 .screen-reader-text {
