--- a/themes/tent/sass/templates/_post.scss
+++ b/themes/tent/sass/templates/_post.scss
@@ -1,7 +1,7 @@
 /*--------------------------------------------------------------
-# Comments 
+# Post-related styling
 --------------------------------------------------------------*/
 
-.comment-content a {
-  word-wrap: break-word;
+.updated:not(.published) {
+  display: none;
 }
