--- a/themes/tent/sass/_variables.scss
+++ b/themes/tent/sass/_variables.scss
@@ -20,6 +20,10 @@ $color__link-hover: midnightblue;
 
 $color__brand: #248a83;
 
+// Components
+$button--primary: #000;
+$button--secondary: $color__brand;
+
 // Typography
 $font__main: sans-serif;
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
