style single product template

--- a/themes/tent/sass/_variables.scss
+++ b/themes/tent/sass/_variables.scss
@@ -3,7 +3,8 @@ $base__space-unit: 1.5rem;
 $max-width: 1120px;
 
 // Colors
-$color__brand: #248a83;
+$color__brand: #248a83; // green
+$color__secondary: #d99054; // orange
 
 $color__background-body: #fff;
 $color__text-main: #404040;
