fix shop grid size

--- a/themes/tent/sass/_variables.scss
+++ b/themes/tent/sass/_variables.scss
@@ -12,7 +12,7 @@ $color__text-main: #404040;
 $color__background-screen: #f1f1f1;
 $color__text-screen: #21759b;
 
-$color__background-hr: #ccc;
+$color__background-hr: #e1e1e1;
 $color__background-pre: #eee;
 $color__background-ins: #fff9c0;
 $color__border-abbr: #666;
