recover removed _s styles

--- a/themes/tent/sass/_modules.scss
+++ b/themes/tent/sass/_modules.scss
@@ -22,3 +22,20 @@
     width: 50%;
   }
 }
+
+.alignleft {
+  display: inline;
+  float: left;
+  margin-right: $base__space-unit;
+}
+
+.alignright {
+  display: inline;
+  float: right;
+  margin-left: $base__space-unit;
+}
+
+.aligncenter {
+  clear: both;
+  @include center-block;
+}
