--- a/themes/tent/style.css
+++ b/themes/tent/style.css
@@ -5,7 +5,7 @@ Author: William L <w-lindvall@outlook.com>
 Author URI: http://github.com/shwilliam
 Description: A camping-inspired WP theme and plugin collection
 Version: 0.1.0
-License: GNU General Public License v2 or later
+License: GNU General Public License v2
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags:
 */
