product type links

--- a/themes/tent/sass/templates/_shop.scss
+++ b/themes/tent/sass/templates/_shop.scss
@@ -2,6 +2,17 @@
 # Shop 
 --------------------------------------------------------------*/
 
+.shop {
+  text-align: center;
+}
+
+.shop__terms {
+  width: 75%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+}
+
 .shop__grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
