--- a/themes/tent/sass/_variables.scss
+++ b/themes/tent/sass/_variables.scss
@@ -21,6 +21,10 @@ $color__link: $color__brand;
 $color__link-visited: darken($color__brand, 10%);
 $color__link-hover: darken($color__brand, 10%);
 
+// Borders
+$color__border: #e1e1e1;
+$color__border--dark: #c8c8c8;
+
 // Components
 $button--primary: #000;
 $button--secondary: $color__brand;
