--- a/plugins/tent-blocks/src/hero-image-header/editor.scss
+++ b/plugins/tent-blocks/src/hero-image-header/editor.scss
@@ -13,7 +13,7 @@
     width: 100%;
   }
 
-  .entry-title-preview {
+  .entry__title-preview {
     position: absolute;
     text-align: center;
     left: 50%;
