--- a/themes/tent/sass/_typography.scss
+++ b/themes/tent/sass/_typography.scss
@@ -2,82 +2,11 @@
 # Typography
 --------------------------------------------------------------*/
 
-body,
-button,
-input,
-select,
-textarea {
+body {
   color: $color__text-main;
   font-family: $font__main;
   @include font-size(1);
   line-height: $font__line-height-body;
-}
-
-/* Headings */
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  clear: both;
-}
-
-/* Copy */
-
-p {
-  margin-bottom: $base__space-unit;
-}
-
-dfn,
-cite,
-em,
-i {
-  font-style: italic;
-}
-
-blockquote {
-  margin: 0 $base__space-unit;
-}
-
-address {
-  margin: 0 0 $base__space-unit;
-}
-
-pre {
-  background: $color__background-pre;
-  font-family: $font__pre;
-  @include font-size(0.9375);
-  line-height: $font__line-height-pre;
-  margin-bottom: 1.6rem;
-  max-width: 100%;
-  overflow: auto;
-  padding: 1.6rem;
-}
-
-code,
-kbd,
-tt,
-var {
-  font-family: $font__code;
-  @include font-size(0.9375);
-}
-
-abbr,
-acronym {
-  border-bottom: 1px dotted $color__border-abbr;
-  cursor: help;
-}
-
-mark,
-ins {
-  background: $color__background-ins;
-  text-decoration: none;
-}
-
-big {
-  font-size: 125%;
 }
 
 a {
@@ -87,14 +16,17 @@ a {
   &:visited {
     color: $color__link-visited;
   }
+
   &:hover,
   &:focus,
   &:active {
     color: $color__link-hover;
   }
+
   &:focus {
     outline: thin dotted;
   }
+
   &:hover,
   &:active {
     outline: 0;
