--- a/themes/tent/sass/_fonts.scss
+++ b/themes/tent/sass/_fonts.scss
@@ -1,3 +1,4 @@
-/*--------------------------------------------------------------
-# Embedded fonts 
---------------------------------------------------------------*/
+// TODO: refactor
+
+@import "../fonts/Merriweather/style.css";
+@import "../fonts/Novecento/style.css";
