--- a/themes/tent/sass/_variables.scss
+++ b/themes/tent/sass/_variables.scss
@@ -30,8 +30,6 @@ $button--primary: #000;
 $button--secondary: $color__brand;
 
 // Typography
-$font__main: sans-serif;
-$font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
-$font__pre: "Courier 10 Pitch", Courier, monospace;
+$font__main: "Merriweather Web", serif;
+$font__title: "Novecento Sans Web", sans-serif;
 $font__line-height-body: 1.5;
-$font__line-height-pre: 1.6;
