--- a/themes/tent/sass/style.scss
+++ b/themes/tent/sass/style.scss
@@ -43,3 +43,4 @@ Tags:
 @import "components/widget";
 @import "components/sidebar";
 @import "components/search-form";
+@import "components/adventures-thumbnail";
