--- a/themes/tent/sass/style.scss
+++ b/themes/tent/sass/style.scss
@@ -44,3 +44,4 @@ Tags:
 @import "components/sidebar";
 @import "components/search-form";
 @import "components/adventures-thumbnail";
+@import "components/blog-thumbnail";
