--- a/themes/tent/sass/components/_adventures-thumbnail.scss
+++ b/themes/tent/sass/components/_adventures-thumbnail.scss
@@ -12,21 +12,22 @@
 
 .adventures-thumbnail__wrapper {
   @include adventures-thumbnail__grid(4);
+
   display: grid;
   grid-template-areas:
     "a1 a2 a2"
     "a1 a3 a4";
-  grid-template-rows: 1fr 1fr;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 50% 50%;
+  grid-template-columns: 50% 25% 25%;
   grid-gap: $base__space-unit/2;
-  height: 80%;
-  min-height: 400px;
-  max-height: 500px;
+  height: 550px;
+  overflow: hidden;
 }
 
 .adventures-thumbnail {
   position: relative;
   width: 100%;
+  overflow: hidden;
 }
 
 .adventures-thumbnail__header {
@@ -36,7 +37,6 @@
   top: 0;
   bottom: 0;
   width: 100%;
-  height: 100%;
   margin: 0;
   padding: $base__space-unit;
   text-align: left;
@@ -46,9 +46,20 @@
   min-height: 100%;
   min-width: 100%;
   object-fit: cover;
+
+  position: absolute;
+  top: -9999px;
+  bottom: -9999px;
+  left: -9999px;
+  right: -9999px;
+  margin: auto;
 }
 
 .adventures-thumbnail__link {
   display: block;
-  color: $color__background-body;
+
+  &,
+  &:visited {
+    color: $color__background-body;
+  }
 }
