--- a/themes/tent/sass/components/_page.scss
+++ b/themes/tent/sass/components/_page.scss
@@ -2,8 +2,7 @@
 # Page styles 
 --------------------------------------------------------------*/
 
-.page__header {
-}
-
 .page__title {
+  @include title;
+  @include font-size(2.4);
 }
