--- a/themes/tent/sass/components/_entry.scss
+++ b/themes/tent/sass/components/_entry.scss
@@ -6,6 +6,22 @@
   @include title;
 }
 
+.entry__title--small {
+  @include font-size(1.4);
+  line-height: 1.3;
+}
+
+.entry__title--serif {
+  font-family: $font__main;
+  @include font-size(2.3);
+  font-weight: 400;
+  line-height: 1.2;
+}
+
+.entry__title--light {
+  font-weight: 400;
+}
+
 .entry__header--float {
   position: relative;
   width: 100%;
@@ -37,6 +53,28 @@
 
 .entry__content {
   margin-bottom: 2 * $base__space-unit;
+  text-align: left;
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @include title;
+    text-align: center;
+  }
+}
+
+.entry__content--left {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    text-align: left;
+  }
 }
 
 .entry__meta--float {
