--- a/themes/tent/sass/components/_sidebar.scss
+++ b/themes/tent/sass/components/_sidebar.scss
@@ -4,4 +4,21 @@
 
 .sidebar {
   flex-grow: 0;
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @include title;
+    @include font-size(1.4);
+  }
+
+  ul,
+  ol,
+  li {
+    padding-left: 0;
+    list-style-type: none;
+  }
 }
