--- a/themes/tent/sass/components/_site.scss
+++ b/themes/tent/sass/components/_site.scss
@@ -43,6 +43,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  font-family: $font__title;
   line-height: $base__space-unit;
   z-index: 9999;
 
