--- a/themes/tent/sass/_mixins.scss
+++ b/themes/tent/sass/_mixins.scss
@@ -45,6 +45,19 @@
   margin-right: auto;
 }
 
+@mixin fill-img {
+  min-height: 100%;
+  min-width: 100%;
+  object-fit: cover;
+
+  position: absolute;
+  top: -9999px;
+  bottom: -9999px;
+  left: -9999px;
+  right: -9999px;
+  margin: auto;
+}
+
 @mixin bordered {
   border: 1px solid $color__background-hr;
 }
