--- a/themes/tent/sass/components/_adventures-thumbnail.scss
+++ b/themes/tent/sass/components/_adventures-thumbnail.scss
@@ -43,16 +43,7 @@
 }
 
 .adventures-thumbnail__img {
-  min-height: 100%;
-  min-width: 100%;
-  object-fit: cover;
-
-  position: absolute;
-  top: -9999px;
-  bottom: -9999px;
-  left: -9999px;
-  right: -9999px;
-  margin: auto;
+  @include fill-img;
 }
 
 .adventures-thumbnail__link {
