--- a/themes/tent/sass/components/_shop.scss
+++ b/themes/tent/sass/components/_shop.scss
@@ -6,10 +6,10 @@
   text-align: center;
 }
 
-.shop__description {
-}
-
 .shop__terms {
+  font-family: $font__title;
+  @include font-size(1.3);
+  text-transform: uppercase;
   width: 75%;
   max-width: 400px;
   margin: 0 auto;
@@ -33,15 +33,22 @@
   overflow: hidden;
 }
 
-.shop__item-img {
+.shop__item-img-wrapper {
+  position: relative;
   height: 250px;
-  object-fit: cover;
+}
+
+.shop__item-img {
+  @include fill-img;
 }
 
 .shop__item-description {
+  @include border-top;
+
   position: relative;
   display: flex;
   justify-content: space-between;
+  padding: $base__space-unit/2;
 }
 
 .shop__item-title {
@@ -60,4 +67,11 @@
 .shop__item-title,
 .shop__item-price {
   background-color: $color__background-body;
+}
+
+.shop__item-link {
+  &,
+  &:visited {
+    color: $color__text-main;
+  }
 }
