--- a/themes/tent/sass/_mixins.scss
+++ b/themes/tent/sass/_mixins.scss
@@ -10,7 +10,7 @@
   margin-left: auto;
 }
 
-@mixin container--small {
+@mixin container-small {
   > * {
     padding-right: 10vw;
     padding-left: 10vw;
