--- a/themes/tent/sass/components/_page.scss
+++ b/themes/tent/sass/components/_page.scss
@@ -7,6 +7,10 @@
   @include font-size(2.4);
 }
 
+.page__header--underline {
+  @include border-bottom;
+}
+
 .page__section--left {
   text-align: left;
 }
