--- a/themes/tent/sass/components/_search-form.scss
+++ b/themes/tent/sass/components/_search-form.scss
@@ -5,7 +5,17 @@
 .search-form {
 }
 
+.search-form__fieldset {
+  border: none;
+  padding: 0;
+}
+
 .search-form__field {
+  @include bordered;
+
+  font: inherit;
+  padding: $base__space-unit/4;
+  background-color: $field__bg;
 }
 
 .search-form__submit {
