--- a/themes/tent/sass/_variables.scss
+++ b/themes/tent/sass/_variables.scss
@@ -5,18 +5,8 @@ $max-width: 1120px;
 // Colors
 $color__brand: #248a83; // green
 $color__secondary: #d99054; // orange
-
-$color__background-body: #fff;
 $color__text-main: #404040;
-
-$color__background-screen: #f1f1f1;
-$color__text-screen: #21759b;
-
-$color__background-hr: #e1e1e1;
-$color__background-pre: #eee;
-$color__background-ins: #fff9c0;
-$color__border-abbr: #666;
-
+$color__background-body: #fff;
 $color__link: $color__brand;
 $color__link-hover: darken($color__brand, 10%);
 
@@ -24,9 +14,12 @@ $color__link-hover: darken($color__brand, 10%);
 $color__border: #e1e1e1;
 $color__border--dark: #c8c8c8;
 
-// Components
+// Buttons
 $button--primary: #000;
 $button--secondary: $color__brand;
+
+// Fields
+$field__bg: #f4f4f4;
 
 // Typography
 $font__main: "Merriweather Web", serif;
