--- a/themes/tent/sass/style.scss
+++ b/themes/tent/sass/style.scss
@@ -20,7 +20,6 @@ Tags:
 # Typography
 # WordPress
 # Modules
-# Templates
 # Components
 --------------------------------------------------------------*/
 
@@ -45,3 +44,4 @@ Tags:
 @import "components/shop-thumbnail";
 @import "components/blog-thumbnail";
 @import "components/adventures-thumbnail";
+@import "components/contact-form";
