--- a/themes/tent/sass/components/_entry.scss
+++ b/themes/tent/sass/components/_entry.scss
@@ -37,6 +37,10 @@
   font-weight: 400;
 }
 
+.entry__title--center {
+  text-align: center;
+}
+
 .entry__title--secondary {
   color: $color__secondary;
   text-align: left;
