--- a/themes/tent/sass/_variables.scss
+++ b/themes/tent/sass/_variables.scss
@@ -6,6 +6,7 @@ $max-width: 1120px;
 $color__brand: #248a83; // green
 $color__secondary: #d99054; // orange
 $color__text-main: #404040;
+$color__text--muted: #a1a1a1;
 $color__background-body: #fff;
 $color__link: $color__brand;
 $color__link-hover: darken($color__brand, 10%);
