--- a/themes/tent/sass/style.scss
+++ b/themes/tent/sass/style.scss
@@ -38,8 +38,10 @@ Tags:
 @import "components/shop";
 @import "components/entry";
 @import "components/button";
+@import "components/input";
 @import "components/widget";
 @import "components/sidebar";
+@import "components/comments";
 @import "components/search-form";
 @import "components/shop-thumbnail";
 @import "components/blog-thumbnail";
