--- a/themes/tent/sass/_mixins.scss
+++ b/themes/tent/sass/_mixins.scss
@@ -36,7 +36,6 @@
 @mixin reset-list {
   list-style: none;
   margin: 0;
-  padding-left: 0;
 }
 
 @mixin center-block {
@@ -63,6 +62,10 @@
 }
 
 @mixin border-top {
+  border-top: 1px solid $color__border;
+}
+
+@mixin border-top--l {
   border-top: 4px solid $color__border;
 }
 
