--- a/themes/tent/sass/components/_page.scss
+++ b/themes/tent/sass/components/_page.scss
@@ -7,6 +7,10 @@
   @include font-size(2.4);
 }
 
+.page__title {
+  @include font-size(1.75);
+}
+
 .page__header--underline {
   @include border-bottom;
 }
